# wgp

./: CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: inner.rs  lib.rs
