[package]
name = "wgp"
version = "0.3.0-dev"
edition = "2021"
license = "MIT"
description = "Yet another waitgroup implementation"
repository = "https://github.com/Nugine/wgp"
readme = "README.md"
documentation = "https://docs.rs/wgp"
categories = ["asynchronous", "concurrency"]
keywords = ["waitgroup", "notify", "wake", "futures", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["futures-util"]

[dependencies]
atomic-waker = { version = "1.1.2", optional = true }
futures-util = { version = "0.3.31", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "time", "macros"] }
